objects/Survey_Countries__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Maintains List of Countries for different types of Surveys</description>
    <fields>
        <fullName>Install_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if the country is valid for Install Survey</description>
        <inlineHelpText>Check if the country is valid for Install Survey</inlineHelpText>
        <label>Install Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>One_Year_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if the country is valid for One Year Survey</description>
        <inlineHelpText>Check if the country is valid for One Year Survey</inlineHelpText>
        <label>One Year Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if the country is valid for Sales Survey</description>
        <inlineHelpText>Check if the country is valid for Sales Survey</inlineHelpText>
        <label>Sales Survey</label>
        <type>Checkbox</type>
    </fields>
    <label>Survey Countries</label>
</CustomObject>